# serial

./: CMakeLists.txt
examples/: CMakeLists.txt  read_write.cpp
include/serial/: serial.h
src/: serial.c
